Change every project to .net 5

--- a/WolvenKit/Views/PropertiesView.xaml
+++ b/WolvenKit/Views/PropertiesView.xaml
@@ -5,8 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WolvenKit.Views"
              xmlns:catel="http://schemas.catelproject.com"
-             xmlns:viewModels="clr-namespace:WolvenKit.ViewModels;assembly=WolvenKit"
-             xmlns:model="clr-namespace:WolvenKit.Model;assembly=WolvenKit"
+             xmlns:viewModels="clr-namespace:WolvenKit.ViewModels"
+             xmlns:model="clr-namespace:WolvenKit.Model"
              xmlns:ei="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:behavior="clr-namespace:WolvenKit.Behavior"
              mc:Ignorable="d" 
