--- a/WolvenKit/Views/DocumentView.xaml
+++ b/WolvenKit/Views/DocumentView.xaml
@@ -11,9 +11,9 @@
 	xmlns:model="clr-namespace:WolvenKit.Model"
 	xmlns:ei="http://schemas.microsoft.com/xaml/behaviors"
 	xmlns:cmodel="clr-namespace:WolvenKit.Common.Model"
-	xmlns:types="clr-namespace:WolvenKit.CR2W.Types;assembly=WolvenKit.CR2W"
-	xmlns:cr2W="clr-namespace:WolvenKit.CR2W;assembly=WolvenKit.CR2W"
-    xmlns:conv="clr-namespace:WolvenKit.Layout.Converters;assembly=WolvenKit"
+	xmlns:types="clr-namespace:WolvenKit.CR2W.Types.CR2W"
+	xmlns:cr2W="clr-namespace:WolvenKit.CR2W.CR2W"
+    xmlns:conv="clr-namespace:WolvenKit.Layout.Converters"
 	d:DesignHeight="450"
 	d:DesignWidth="800"
 	mc:Ignorable="d">
