--- a/WolvenKit/Views/ImportView.xaml
+++ b/WolvenKit/Views/ImportView.xaml
@@ -5,11 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WolvenKit"
              xmlns:catel="http://schemas.catelproject.com"
-             xmlns:viewModels="clr-namespace:WolvenKit;assembly=WolvenKit"
-             xmlns:model="clr-namespace:WolvenKit;assembly=WolvenKit"
+             xmlns:viewModels="clr-namespace:WolvenKit"
+             xmlns:model="clr-namespace:WolvenKit"
              xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
-             xmlns:behavior="clr-namespace:WolvenKit.Behavior;assembly=WolvenKit" xmlns:i1="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:behavior="clr-namespace:WolvenKit.Behavior" xmlns:i1="http://schemas.microsoft.com/xaml/behaviors"
                    mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid
