--- a/WolvenKit/App.xaml
+++ b/WolvenKit/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="WolvenKit"
+﻿<Application x:Class="WolvenKit.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
