--- a/WolvenKit/Views/ImportView.xaml
+++ b/WolvenKit/Views/ImportView.xaml
@@ -6,11 +6,12 @@
              xmlns:local="clr-namespace:WolvenKit"
              xmlns:catel="http://schemas.catelproject.com"
              xmlns:viewModels="clr-namespace:WolvenKit"
-             xmlns:model="clr-namespace:WolvenKit"
+             xmlns:model="clr-namespace:WolvenKit.Model"
              xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
-             xmlns:behavior="clr-namespace:WolvenKit.Behavior" xmlns:i1="http://schemas.microsoft.com/xaml/behaviors"
-                   mc:Ignorable="d" 
+             xmlns:behavior="clr-namespace:WolvenKit.Behavior;assembly=WolvenKit" 
+             xmlns:i1="http://schemas.microsoft.com/xaml/behaviors"
+             mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid
         xmlns:conv="clr-namespace:WolvenKit.Layout.Converters">
