--- a/WolvenKit/Views/ImportView.xaml
+++ b/WolvenKit/Views/ImportView.xaml
@@ -9,7 +9,7 @@
              xmlns:model="clr-namespace:WolvenKit.Model"
              xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
-             xmlns:behavior="clr-namespace:WolvenKit.Behavior;assembly=WolvenKit" 
+             xmlns:behavior="clr-namespace:WolvenKit.Behavior" 
              xmlns:i1="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
