--- a/WolvenKit/Views/HomePageView.xaml
+++ b/WolvenKit/Views/HomePageView.xaml
@@ -13,8 +13,14 @@
     </catel:UserControl.Resources>
     <Grid Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" MinWidth="1024" MinHeight="720" >
 
+        <Grid HorizontalAlignment="Left" Width="320" Background="{DynamicResource Fluent.Ribbon.Brushes.ColorGallery.Item.BorderBrush}">
+            <ListBox>
+                <ListBoxItem Content="ListBoxItem"/>
+                <ListBoxItem Content="ListBoxItem"/>
+                <ListBoxItem Content="ListBoxItem"/>
 
-            </Grid>
+            </ListBox>
+        </Grid>
 
         <Grid HorizontalAlignment="Right" Background="{DynamicResource Fluent.Ribbon.Brushes.ColorGallery.Item.BorderBrush}">
 
