--- a/WolvenKit/Views/Backstage/OpenFileView.xaml
+++ b/WolvenKit/Views/Backstage/OpenFileView.xaml
@@ -9,7 +9,9 @@
                    xmlns:orchestra="http://schemas.wildgums.com/orchestra"
                    xmlns:fluent="urn:fluent-ribbon"
                    xmlns:orccontrols="http://schemas.wildgums.com/orc/controls" 
-                   xmlns:orctheming="http://schemas.wildgums.com/orc/theming"
+                   xmlns:orctheming="http://schemas.wildgums.com/orc/theming"           
+                   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+
                    mc:Ignorable="d" 
                    d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
@@ -22,13 +24,32 @@
             <Label Grid.Row="0" Content="Open" Style="{DynamicResource RibbonBackstageHeaderLabelStyle}" />
 
             <orchestra:RibbonBackstageTabControl Grid.Row="1">
-                <orchestra:RibbonBackstageTabItem HeaderText="Recent documents" 
-                                                  Icon="{orctheming:FontImage {x:Static global:FontAwesome.ClockO}, FontFamily=FontAwesome}">
+                <orchestra:RibbonBackstageTabItem >            
+                    <orchestra:RibbonBackstageTabItem.HeaderTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <Grid HorizontalAlignment="Center"  VerticalAlignment="Center">
+                                    <iconPacks:PackIconCodicons Margin="5,0,0,0"  Height="20" Kind="GoToFile" Width="20" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"/>                             
+                                </Grid>
+                                <TextBlock Margin="15" Text="Recent Documents" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"></TextBlock>
+                            </StackPanel>                                
+                        </DataTemplate>
+                    </orchestra:RibbonBackstageTabItem.HeaderTemplate>
                     <local:RecentlyUsedItemsView />
                 </orchestra:RibbonBackstageTabItem>
 
                 <orchestra:RibbonBackstageTabItem HeaderText="Computer" 
                                                   Icon="{orctheming:FontImage {x:Static global:FontAwesome.FolderO}, FontFamily=FontAwesome}">
+                    <orchestra:RibbonBackstageTabItem.HeaderTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <Grid HorizontalAlignment="Center"  VerticalAlignment="Center">
+                                    <iconPacks:PackIconCodicons Margin="5,0,0,0"  Height="20" Kind="VM" Width="20" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"/>
+                                </Grid>
+                                <TextBlock Margin="15" Text="This Computer" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"></TextBlock>
+                            </StackPanel>
+                        </DataTemplate>
+                    </orchestra:RibbonBackstageTabItem.HeaderTemplate>
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
@@ -39,12 +60,24 @@
                                                                 HeaderText="Computer"
                                                                 HeaderTextStyleKey="RibbonBackstageSubHeaderLabelStyle" />
 
-                        <fluent:Button Grid.Row="1" 
-                                       Header="Open..." 
-                                       LargeIcon="{orctheming:FontImage {x:Static global:FontAwesome.FolderOpenO}, FontFamily=FontAwesome}"
+                        <fluent:Button Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
+                                       Grid.Row="1" 
                                        Command="{catel:CommandManagerBinding Application.OpenProject}" 
                                        Style="{DynamicResource ButtonBackstageStyle}"
-                                       HorizontalAlignment="Left" />
+                                       HorizontalAlignment="Left" >
+
+                            <fluent:Button.Template>
+                                <ControlTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <iconPacks:PackIconCodicons HorizontalAlignment="Center" VerticalAlignment="Center"  Height="15" Kind="FolderOpened" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"/>
+
+                                        <TextBlock  Margin="15" Text="Open..."></TextBlock>
+
+                                    </StackPanel>
+                                </ControlTemplate>
+                            </fluent:Button.Template>
+
+                        </fluent:Button>
                     </Grid>
                 </orchestra:RibbonBackstageTabItem>
             </orchestra:RibbonBackstageTabControl>
