--- a/WolvenKit/Views/Wizards/PublishWizardView.xaml
+++ b/WolvenKit/Views/Wizards/PublishWizardView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.FirstSetupWizard"
+﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.PublishWizardView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com">
