--- a/WolvenKit/Views/Wizards/WizardPages/ProjectWizard/FinalizeSetupView.xaml
+++ b/WolvenKit/Views/Wizards/WizardPages/ProjectWizard/FinalizeSetupView.xaml
@@ -1,16 +1,62 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.WizardPages.ProjectWizard.FinalizeSetupView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com">
+                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        
-        <Label Grid.Row="0" Content="{Binding Title}" />
-        <Label Grid.Row="1" Content="Here goes your real content" />
+    <Grid HorizontalAlignment="Stretch" Grid.Row="3" >
+        <Grid Margin="5,5,5,5" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" HorizontalAlignment="Stretch">
+            <Grid Grid.Row="1" HorizontalAlignment="Stretch">
+                <StackPanel Margin="0,10,0,0" Orientation="Vertical" VerticalAlignment="Top">
+                    <TextBlock Text="Does This Look Right?"  FontSize="14" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="10,10,0,10"></TextBlock>
+                    <Grid Margin="22,0,0,0" >
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="6*"></ColumnDefinition>
+                            <ColumnDefinition Width="1*"></ColumnDefinition>
+
+                        </Grid.ColumnDefinitions>
+                        <StackPanel>
+                            <Grid Margin="5,32,0,0" >
+
+                                <TextBlock   VerticalAlignment="Center">                               
+                                    <Run Text="Project Image"></Run>
+
+                                    <LineBreak/>
+                                    <Run Text="Optional"></Run>
+                                </TextBlock>
+                                <hc:ImageSelector Margin="100,0,0,0" Width="100" Height="100"  HorizontalAlignment="Left"/>
+                            </Grid>
+                            <Grid Margin="5,32,0,0" >
+
+                                <TextBlock Text="Project Name" VerticalAlignment="Center">        </TextBlock>
+                                <TextBox Margin="100,0,0,0" Text="Project Name" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
+                            </Grid>
+
+                            <Grid Margin="5,32,0,0" >
+
+                                <TextBlock Text="Project Type" VerticalAlignment="Center"></TextBlock>
+                                <TextBox Margin="100,0,0,0" Text="Project Type" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
+                            </Grid>
+                            <Grid Margin="5,32,0,0" >
+
+                                <TextBlock Text="Project Path" VerticalAlignment="Center"></TextBlock>
+                                <TextBox Margin="100,0,0,0" Text="Project Path" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
+                            </Grid>
+                    
+                        </StackPanel>
+
+
+                        <Grid Grid.Column="1">
+                            <StackPanel Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Bottom">
+                                <Button Height="45" Content="Yes, Create my project!" Margin="5"></Button>
+
+                                <Button Height="45" Content="No, Cancel my project!" Margin="5,5,5,0"></Button>
+                            </StackPanel>
+                
+
+                        </Grid>
+                    </Grid>
+                </StackPanel>
+            </Grid>
+        </Grid>
     </Grid>
-    
 </catel:UserControl>
