--- a/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/LocateGameDateView.xaml
+++ b/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/LocateGameDateView.xaml
@@ -1,16 +1,81 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.WizardPages.FirstSetupWizard.LocateGameDateView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com">
+                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        
-        <Label Grid.Row="0" Content="{Binding Title}" />
-        <Label Grid.Row="1" Content="Here goes your real content" />
+    <Grid HorizontalAlignment="Stretch" Grid.Row="3" >
+        <Grid Margin="5,5,5,5" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" HorizontalAlignment="Stretch">
+            <Grid Grid.Row="1" HorizontalAlignment="Stretch">
+                <StackPanel Margin="0,10,0,0" Orientation="Vertical" VerticalAlignment="Top">
+                    <TextBlock Text="Locate Game Data"  FontSize="14" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="10,10,0,10"></TextBlock>
+                    <Grid Margin="22,0,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="3*"></ColumnDefinition>
+                            <ColumnDefinition Width="60"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+
+
+
+
+                        <StackPanel>
+
+
+                            <hc:Divider HorizontalContentAlignment="Left" Content="The Witcher 3" Margin="0,32,0,0"></hc:Divider>
+
+                            <TextBox hc:InfoElement.TitleWidth="200" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Executable Path" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="test" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
+                            <TextBox hc:InfoElement.TitleWidth="200" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="WCC_Lite.exe Path" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="test" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
+                            <TextBox hc:InfoElement.TitleWidth="200" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Uncooked Depot Path" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="test" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
+                            <TextBox hc:InfoElement.TitleWidth="200" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Mods Folder" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="test" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
+                            <TextBox hc:InfoElement.TitleWidth="200" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="DLC Folder" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="test" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
+                            <hc:Divider  HorizontalContentAlignment="Left"  Content="Cyberpunk 2077" Margin="0,32,0,0"></hc:Divider>
+                            <TextBox hc:InfoElement.TitleWidth="200" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Executable Path" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="test" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
+
+
+
+                        </StackPanel>
+
+
+                        <StackPanel Grid.Column="1">
+                            <hc:Divider Margin="0,42,0,0"></hc:Divider>
+
+                            <Button Grid.Column="1" Width="50" Height="34"  Margin="5,40,0,0"  VerticalAlignment="Bottom" HorizontalAlignment="Right">
+                                <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="FolderOpened" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Center" />
+
+                            </Button>
+                            <Button Grid.Column="1" Width="50" Height="34"  Margin="5,32,0,0"  VerticalAlignment="Bottom" HorizontalAlignment="Right">
+                                <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="FolderOpened" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Center" />
+
+                            </Button>
+                            <Button Grid.Column="1" Width="50" Height="34"  Margin="5,98,0,0"  VerticalAlignment="Bottom" HorizontalAlignment="Right">
+                                <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="FolderOpened" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Center" />
+
+                            </Button>
+                            <Button Grid.Column="1" Width="50" Height="34"  Margin="5,32,0,0"  VerticalAlignment="Bottom" HorizontalAlignment="Right">
+                                <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="FolderOpened" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Center" />
+
+                            </Button>
+                            <hc:Divider Margin="0,43,0,0"></hc:Divider>
+
+
+                            <Button Grid.Column="1" Width="50" Height="34"  Margin="5,40,0,0"  VerticalAlignment="Bottom" HorizontalAlignment="Right">
+                                <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="FolderOpened" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Center" />
+
+                            </Button>
+       
+                        </StackPanel>
+                       
+
+
+
+
+
+
+
+
+                    </Grid>
+                </StackPanel>
+            </Grid>
+        </Grid>
     </Grid>
-    
+
 </catel:UserControl>
