--- a/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/SelectThemeView.xaml
+++ b/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/SelectThemeView.xaml
@@ -13,10 +13,10 @@
         <Grid Margin="5,5,5,5" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" HorizontalAlignment="Stretch">
             <Grid Grid.Row="1" HorizontalAlignment="Stretch">
                 <StackPanel Margin="0,10,0,0" Orientation="Vertical" VerticalAlignment="Top">
-                    <TextBlock Text="Select a Theme"  FontSize="14" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="10,10,0,10"/>
+                    <TextBlock Text="Select Theme"  FontSize="14" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="10,10,0,10"/>
                     <Grid Margin="22,0,0,0">
-                        <TextBlock HorizontalAlignment="Left"  VerticalAlignment="Center" FontSize="14" Margin="35,15,0,15" Text="Theme"></TextBlock>
-                        <WrapPanel FlowDirection="LeftToRight"  Margin="140,15,10,15" VerticalAlignment="Center"  HorizontalAlignment="Stretch"  x:Name="CircleTest"></WrapPanel>
+                        <TextBlock HorizontalAlignment="Left"  VerticalAlignment="Center" FontSize="14" Margin="35,15,0,0" Text="Theme"></TextBlock>
+                        <WrapPanel FlowDirection="LeftToRight"  Margin="140,15,10,0" VerticalAlignment="Center"  HorizontalAlignment="Stretch"  x:Name="CircleTest"></WrapPanel>
                     </Grid>
                 </StackPanel>
             </Grid>
