--- a/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/SetInitialPreferencesView.xaml
+++ b/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/SetInitialPreferencesView.xaml
@@ -1,16 +1,81 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.WizardPages.FirstSetupWizard.SetInitialPreferencesView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com">
+                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        
-        <Label Grid.Row="0" Content="{Binding Title}" />
-        <Label Grid.Row="1" Content="Here goes your real content" />
+    <Grid HorizontalAlignment="Stretch" Grid.Row="3" >
+        <Grid Margin="5,5,5,5" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" HorizontalAlignment="Stretch">
+            <Grid Grid.Row="1" HorizontalAlignment="Stretch">
+                <StackPanel Margin="0,10,0,0" Orientation="Vertical" VerticalAlignment="Top">
+                    <TextBlock Text="Set Initial Preferences"  FontSize="14" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="10,10,0,10"></TextBlock>
+                    <Grid Margin="22,0,0,0">
+
+                       
+
+               
+
+
+                            <StackPanel Orientation="Vertical">
+                                <TextBlock FontSize="14"  Margin="35,35,5,5" Text="What game(s) do you want to create mods for?" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"></TextBlock>
+                            <TextBlock VerticalAlignment="Center" FontSize="14"  Margin="35,40,5,5" Text="Automatically install mods after creation?" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"></TextBlock>
+                            <TextBlock VerticalAlignment="Center" FontSize="14"  Margin="35,40,5,5" Text="Would you like to recieve automatic updates for Wolvenkit?" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"></TextBlock>
+
+
+                        </StackPanel>
+
+
+
+
+                            <StackPanel Margin="455,0,0,0" Grid.Column="1" Orientation="Vertical">
+
+
+                            <StackPanel Orientation="Horizontal">
+                                <CheckBox Margin="10,35,5,5" HorizontalAlignment="Left" Content="The Witcher 3" IsChecked="True" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Background="{DynamicResource MahApps.Brushes.Accent}" BorderBrush="{DynamicResource MahApps.Brushes.Accent}"/>
+                                <hc:Divider Margin="5,35,5,5" Orientation="Vertical" MaxHeight="20"></hc:Divider>
+                                <CheckBox Margin="5,35,5,5" HorizontalAlignment="Left" Content="Cyberpunk 2077" IsChecked="True" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Background="{DynamicResource MahApps.Brushes.Accent}" BorderBrush="{DynamicResource MahApps.Brushes.Accent}"/>
+
+                            </StackPanel>
+                            <ToggleButton Margin="5,35,5,5" BorderThickness="0" IsEnabled="True" IsChecked="True" VerticalAlignment="Center"  HorizontalAlignment="Left" Style="{StaticResource ToggleButtonFlip}">
+                                    <hc:StatusSwitchElement.CheckedElement>
+                                        <Border Background="{DynamicResource MahApps.Brushes.Accent}">
+                                            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="On" Foreground="{DynamicResource TextIconBrush}"/>
+                                        </Border>
+                                    </hc:StatusSwitchElement.CheckedElement>
+                                    <Border Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}">
+                                        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="Off" Foreground="{DynamicResource TextIconBrush}"/>
+                                    </Border>
+                            </ToggleButton>
+                            <StackPanel Orientation="Horizontal">
+                                <ToggleButton Margin="5,30,5,15" BorderThickness="0" IsEnabled="True" IsChecked="True" VerticalAlignment="Center"  HorizontalAlignment="Left" Style="{StaticResource ToggleButtonFlip}">
+                                    <hc:StatusSwitchElement.CheckedElement>
+                                        <Border Background="{DynamicResource MahApps.Brushes.Accent}">
+                                            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="On" Foreground="{DynamicResource TextIconBrush}"/>
+                                        </Border>
+                                    </hc:StatusSwitchElement.CheckedElement>
+                                    <Border Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}">
+                                        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="Off" Foreground="{DynamicResource TextIconBrush}"/>
+                                    </Border>
+                                </ToggleButton>
+                                <hc:Divider Margin="5,30,5,15" Orientation="Vertical" MaxHeight="20"></hc:Divider>
+                                <ComboBox VerticalAlignment="Center" Margin="5,30,5,15" ItemsSource="{Binding DataList}" Width="320" hc:InfoElement.TitleWidth="100" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Update Channel" Style="{StaticResource ComboBoxExtend}"  Text=""/>
+
+
+                            </StackPanel>
+                           
+                         
+                        </StackPanel>
+
+
+                   
+
+
+                       
+
+                    </Grid>
+                </StackPanel>
+            </Grid>
+        </Grid>
     </Grid>
-    
+
+
 </catel:UserControl>
