--- a/WolvenKit/Views/Wizards/WizardPages/PublishWizard/RequiredSettingsView.xaml
+++ b/WolvenKit/Views/Wizards/WizardPages/PublishWizard/RequiredSettingsView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:DataWindow x:Class="WolvenKit.Views.Wizards.WizardPages.PublishWizard.RequiredSettingsView"
+﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.WizardPages.PublishWizard.RequiredSettingsView"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:catel="http://schemas.catelproject.com">
@@ -13,4 +13,4 @@
         <TextBlock Grid.Row="1" Text="Here goes your real content" />
     </Grid>
     
-</catel:DataWindow>
+</catel:UserControl>
